# Manipulator_project_RBE

./: CMakeLists.txt  README.md  inv_jacobian.srv  jacobian.srv  package.xml  velocity_server.py
fk/: fk.py
gazebo_ros_demo/rrbot_control/: package.xml
gazebo_ros_demo/rrbot_control/scripts/fk/: fk.py
gazebo_ros_demo/rrbot_control/scripts/ik/: ik_server.py
gazebo_ros_demo/rrbot_description/launch/: rrbot_rviz.launch
gazebo_ros_demo/rrbot_description/urdf/: gazebo_plugins.xacro  scara.xacro
gazebo_ros_demo/rrbot_gazebo/launch/: rrbot_world.launch  world.launch
launch/: world.launch
scara/catkin_scara/src/scara_control/: CMakeLists.txt  package.xml
scara/catkin_scara/src/scara_control/launch/: scara_rqt.launch
scara/catkin_scara/src/scara_control/srv/: inv_kin.srv
scara/catkin_scara/src/scara_description/launch/: scara_rviz.launch
scara/catkin_scara/src/scara_description/urdf/: gazebo_plugins.xacro  scara.gazebo  scara.xacro
scara/catkin_scara/src/scara_gazebo/: package.xml
scara/catkin_scara/src/scara_gazebo/launch/: scara_world.launch  world.launch
urdf/: scara.urdf  scara.xacro
